--- a/portcrg/styles/Asistencias.module.css
+++ b/portcrg/styles/Asistencias.module.css
@@ -1,203 +1,154 @@
-
 .contenedor {
-    width: 98%;
+    width: 100%;
+    min-height: 720px;
     height: 100%;
-    margin:0 auto ;
+    margin: 0 auto;
     overflow: hidden;
+    background-color: #FDFFFC ;
+    padding: auto;
+}
+
+.divTitulo {
+    background-color: #FDFFFC   ;
+    position: relative;
+    width: 96%;
+    height: 50px;
+    margin-left: 2%;
+    color: #FF101F;
+  
+
+}
+.h1 {
+    margin-left: 10%;
+    width: 100%;
+}
+
+.divCampos {
+  
+    background-color: #FDFFFC ;
+    width: 96%;
+    height: 150px;
+    margin-left: 2%;
+
+
+}
+.divInicio{
     background-color: #FDFFFC;
-
+    float: left ;
+    width: 20%;
+    height: 150px;
 }
-.titulo{
-    position: relative;
-width: 247px;
-height: 29px;
-left: 150px;
-top: 50px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 24px;
-line-height: 29px;
-/* identical to box height */
-
-
-color: #FF101F;
+.divInput1{
+    background-color: #FDFFFC;
+    float: left;
+    width: 20%;
+    height: 150px;
 }
-.titulo2{
-    position: relative;
-width: 108px;
-height: 29px;
-left: 110px;
-top: 134px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 24px;
-line-height: 29px;
-/* identical to box height */
-
-
-color: #FF101F;
-
+.divFinal{
+    background-color: #FDFFFC;
+   float: left;
+   width: 10%;
+   height: 150px;
 }
-.titulo3{
-    position: relative;
-width: 108px;
-height: 29px;
-left: 550px;
-top: 85px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 24px;
-line-height: 29px;
-/* identical to box height */
-
-
-color: #FF101F;
-
+.divInput2{
+    background-color: #FDFFFC;
+    float: left;
+    width: 20%;
+    height: 150px;
 }
-.inbox1{
+.Input {
+    margin-top: 65px;
     box-sizing: border-box;
-
-position: relative;
-width: 314px;
-height: 35px;
-left: 190px;
-top: -2px;
-
-background: rgba(255, 255, 255, 0.2);
-
-border: 1px solid #000000;
-border-radius: 10px;
-}
-.inbox2{
-    box-sizing: border-box;
-
-    position: relative;
-    width: 314px;
-    height: 35px;
-    left: 600px;
-    top: -40px;
-    
-    background: rgba(255, 255, 255, 0.2);
-    
+    width: 99%;
+    height: 43px;
     border: 1px solid #000000;
     border-radius: 10px;
+    color: #000000;
+    align-items: center;
+    margin-left: 1px;
 }
-.butonbuscar{
-    /* Rectangle 11 */
-
-
-box-sizing: border-box;
-
-position: relative;
-width: 170px;
-height: 40px;
-left: 1027px;
-top: 31px;
-
-background: #56A3A6;
-border: 1px solid #ABABAB;
-border-radius: 9px;
-color: #FDFFFC;
+.h2{
+    margin-right: 5px;
+    margin-top: 70px;
+    font-size: 21px;
+    margin-left: 60%;
+    color: #FF101F;
+    float: right;
 }
-.linea{
+.divBoton{
+    background-color: #FDFFFC ;
+    float: left;
+    width: 30%;
+    height: 150px;
+}
+.Boton {
     position: relative;
-    width: 80%;
-    height: 0px;
-    left: 29px;
-    top: -30px;
-    
-    border: 1px solid #6a0808;
+    width: 60%;
+    height: 50px;
+    background: #56A3A6;
+    border: 1px solid #ABABAB;
+    border-radius: 9px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    float: right;
+    color: #FDFFFC;
+    float: left;
+    top: 59px;
+    margin-left:50px;
 }
-.matriz{
-    background-color: #888888;
-    width: 90%;
-    height: 500px;
-    left: 290px;
-    top: 0px;
+.Boton:hover {
+    background-color: #03816e;
 }
-.divmatriz{
-    position: relative;
-width: 100%;
-height: 570px;
-left: 90px;
-top: -20px;
+.Boton:active {
+    background-color: #031926;
 }
-@media screen and (max-width: 600px) {
-    .titulo{
-        left: 100px;
-        top: 20px;
-    }
 
-    
-}
-@media screen and (max-width: 600px) {
-    .titulo2{
-        left: 100px;
-        top: 50px;
-    }
+.divMatriz{
+  
+    background-color: #4f4f4f;
+    width: 96%;
+    height: 490px;
+    margin-left: 2%;
 
-    
 }
-@media screen and (max-width: 600px) {
-    .titulo3{
-        left: 100px;
-        top: 90px;
-    }
+.divEMatriz{
+    background-color: #c1bebe;
+    width: 100%;
+    height: 10%;
+    
 
+}
+.EMatriz{
+    color: rgb(0, 0, 0);
     
 }
-@media screen and (max-width: 600px) {
-    .inbox1{
-        left: 100px;
-        top: -50px;
-    }
 
-    
-}
-@media screen and (max-width: 600px) {
-    .inbox2{
-        left: 100px;
-        top: 1px;
-    }
 
-    
-}
-@media screen and (max-width: 600px) {
-    .butonbuscar{
-        width: 170px;
-        height: 40px;
-        left: 160px;
-        top: 140px;
-    }
 
-    
-}
+
+
+
+
+
+
 @media screen and (max-width: 600px) {
-    .divmatriz{
-        left: 40px;
-        top: 100px;
-        width: 100%;
-        height: 470px;
+    .divTitulo {
+        left: -25px;
+        background-color: #FDFFFC;
         
+        color: #FF101F;
+        margin-left: 5px;
     }
-
-    
 }
+
+
 @media screen and (max-width: 600px) {
-    .linea{
-        left: 40px;
-        top: 100px;
+    .divCampos {
+        background-color: #FDFFFC;
+        align-items: center;
         width: 100%;
-        height: 470px;
-        opacity: 0;
-        
     }
-
-    
 }
+
