--- a/portcrg/styles/globals.css
+++ b/portcrg/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.react-pdf__Page__canvas {
+  margin: 0 auto;
+  width: 100% !important;
+  height: 100% !important;
+}
+.react-pdf__Page__textContent {
+  margin: 0 auto;
+  width: 100% !important;
+  height: 100% !important;
+}
