--- a/portcrg/styles/Sing_up.module.css
+++ b/portcrg/styles/Sing_up.module.css
@@ -60,6 +60,20 @@
     color: #000000;
     margin-left: 5%;
 }
+.select:invalid + span:after{
+    content: 'X';
+    color: red;
+    padding-left: 5px;
+    font-weight: bold;
+
+}
+.select:valid + span:after{
+    content: '✓';
+    color: rgb(0, 123, 25);
+    padding-left: 5px;
+    font-weight: bold;
+    
+}
 .input {
     box-sizing: border-box;
     width: 90%;
@@ -69,6 +83,19 @@
     color: #000000;  
     margin-left: 5%; 
 }
+.input:invalid + span:after{
+    content: 'X';
+    color: red;
+    padding-left: 5px;
+    font-weight: bold;
+    }
+.input:valid + span:after {
+        content: '✓';
+        color: rgb(0, 123, 25);
+        padding-left: 5px;
+        font-weight: bold;
+    }
+
 .divNumeroDpi {
     font-family: 'Inter';
     font-style: normal;
@@ -134,11 +161,81 @@
     margin-left: 5%;
     margin-top: 4%;
 }
+.btn{
+    width: 190px;
+    height: 57px;
+    background: #56A3A6;
+    border: 1px solid #ABABAB;
+    border-radius: 9px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    color: #FDFFFC;
+    margin-right: auto;
+    margin-left: 5%;
+    margin-top: 4%;
+}
 .Boton:hover {
     background-color: #03816e;
 }
 .Boton:active {
     background-color: #031926;
+}
+.boton:disabled{
+    background-color: #9e9e9e;
+}
+.popup{
+    width: 400px;
+    background: hsl(142, 76%, 81%);
+    border-radius: 6px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    visibility: hidden;
+}
+.popupBoton{
+    width: 190px;
+    height: 57px;
+    background: #56A3A6;
+    border: 1px solid #ABABAB;
+    border-radius: 9px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    color: #FDFFFC;
+    margin-right: auto;
+    margin-left: 5%;
+    margin-top: 4%;
+}
+@media screen and (max-width: 774px) {
+    .input {
+        width: 80%;
+       
+        }
+}
+@media screen and (max-width: 774px) {
+    .select {
+        width: 80%;
+       
+        }
+}
+@media screen and (max-width: 263px) {
+    .input {
+        width: 60%;
+       
+        }
+}
+@media screen and (max-width: 263px) {
+    .select {
+        width: 60%;
+       
+        }
 }
 @media screen and (max-width: 750px) {
     .divCampos {
@@ -229,4 +326,37 @@
         height: 57px;
     }
 }
+@media screen and (max-width: 289px) {
+    .Boton {
+        margin-left: 2%;
+        margin-top: 5%;
+        width: 90px;
+        height: 57px;
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 263px) {
+    .Boton {
+        margin-left: 2%;
+        margin-top: 5%;
+        width: 60px;
+        height: 57px;
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 263px) {
+    .htitulo2 {
+        margin-left: 2%;
+    }
+}
+@media screen and (max-width: 353px) {
+    .htitulo2 {
+        margin-left: 2%;
+    }
+}
+
+
+
+
+
 
