--- a/portcrg/styles/Sing_up.module.css
+++ b/portcrg/styles/Sing_up.module.css
@@ -197,6 +197,14 @@
     padding: 0 30px 30px;
     color: #333;
     visibility: hidden;
+    transition: trasform 0.4s, top 0.4s;
+}
+.open-popup{
+    visibility: visible;
+    top:50%;
+    transform: translate(-50%,-50%) scale(1);
+
+
 }
 .popupBoton{
     width: 190px;
