--- a/portcrg/styles/Sing_up.module.css
+++ b/portcrg/styles/Sing_up.module.css
@@ -1,15 +1,16 @@
 .contenedor {
     width: 100%;
-    min-height: 570px;
+    min-height: 620px;
     height: 100%;
     margin: 0 auto;
     background-color: #FDFFFC ;   
 }
 .divTitulo {
     width: 100%;
-    height: 60px;
+    height: 80px;
     margin-left: auto;
-    margin-right: auto;   
+    margin-right: auto; 
+
 }
 .htitulo1 {
     width: 40%;
@@ -19,6 +20,7 @@
     font-size: auto;
     margin-right: auto;
     margin-left: auto;
+
 }
 .htitulo2 {
     width: 100%;
@@ -31,7 +33,7 @@
 
 .divCampos {
     background-color: #f1f5f9;
-    width: 40%;
+    width: 50%;
     height: 490px;
     margin-left: 20%;
     border-style: solid;
@@ -145,6 +147,7 @@
 .divBoton {
     width: 100%;
     height: 85px;
+   
 }
 .Boton {
     width: 190px;
@@ -159,7 +162,7 @@
     color: #FDFFFC;
     margin-right: auto;
     margin-left: 5%;
-    margin-top: 4%;
+    margin-top: 2%;
 }
 .btn{
     width: 190px;
@@ -200,20 +203,35 @@
 }
 @media screen and (max-width: 263px) {
     .input {
-        width: 60%;
+        width: 80%;
        
         }
 }
 @media screen and (max-width: 263px) {
     .select {
-        width: 60%;
+        width: 80%;
        
         }
 }
+@media screen and (max-width: 1300px) {
+    .divCampos {
+        align-items: center;
+        margin-left: 10%;
+        width: 80%;
+        }
+}
+@media screen and (max-width: 1001px) {
+    .divCampos {
+        align-items: center;
+        margin-left: 10%;
+        width: 80%;
+        }
+}
+
 @media screen and (max-width: 750px) {
     .divCampos {
         align-items: center;
-        margin-left: 30%;
+        margin-left: 10%;
         }
 }
 @media screen and (max-width: 903px) {
@@ -222,15 +240,25 @@
     }
     
 }
-@media screen and (max-width: 903px) {
+@media screen and (max-width: 620px) {
     .htitulo1 {
-        font-size: 20px;
+        font-size: 25px;
     }
     
 }
-@media screen and (max-width: 903px) {
-    .divTitulo {
+@media screen and (max-width: 511px) {
+    .htitulo1 {
         font-size: 20px;
+     
+        width: 60%;
+    }
+    
+}
+@media screen and (max-width: 271px) {
+    .htitulo1 {
+        font-size: 20px;
+      
+        width: 70%;
     }
     
 }
