--- a/portcrg/styles/Sing_up.module.css
+++ b/portcrg/styles/Sing_up.module.css
@@ -1,158 +1,134 @@
-.contenedor {
-    width: 100%;
-    min-height: 620px;
-    height: 100%;
-    margin: 0 auto;
-    background-color: #FDFFFC ;   
-}
-.divTitulo {
-    width: 100%;
-    height: 80px;
-    margin-left: auto;
-    margin-right: auto; 
-
-}
-.htitulo1 {
-    width: 40%;
-    color: #34305c;
-    font-size: 40px;
-    font-weight: bold;
-    font-size: auto;
-    margin-right: auto;
-    margin-left: auto;
-
-}
-.htitulo2 {
-    width: 100%;
-    color: #56A3A6;
-    font-size: 12px;
-    font-weight: bold;
-    font-size: auto;
-    margin-left: 35px;
-}
-
-.divCampos {
-    background-color: #f1f5f9;
-    width: 50%;
-    height: 490px;
-    margin-left: 20%;
-    border-style: solid;
-    border-color: #000000;
-    margin-left: auto;
-    border-radius: 2px;
-    margin-right: auto;
-    box-shadow: 1px 2px 5px ;
-    font-size: auto;
-}
-.divespacio{
-    width: 100%;
-    height: 5px;
-}
-
-.select {
-    width: 90%;
-    height: 35px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    color: #000000;
-    margin-left: 5%;
-}
-.select:invalid + span:after{
-    content: 'X';
-    color: red;
-    padding-left: 5px;
-    font-weight: bold;
-
-}
-.select:valid + span:after{
-    content: '✓';
-    color: rgb(0, 123, 25);
-    padding-left: 5px;
-    font-weight: bold;
-    
-}
-.input {
+.general{
+    margin: 0;
+    padding: 0;
+    outline: none;
     box-sizing: border-box;
-    width: 90%;
-    height: 35px;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    color: #000000;  
-    margin-left: 5%; 
-}
-.input:invalid + span:after{
-    content: 'X';
-    color: red;
-    padding-left: 5px;
-    font-weight: bold;
-    }
-.input:valid + span:after {
-        content: '✓';
-        color: rgb(0, 123, 25);
-        padding-left: 5px;
-        font-weight: bold;
-    }
+    font-family: 'Poppins', sans-serif;
 
-.divNumeroDpi {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    height: 15px;
-    color: #000000;
-    margin-left: 5%;
+
 }
-.divNumero {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    color: #000000;
-    height: 15px;   
-    margin-left: 5%;
+.bod{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 80vh;
+    padding: 40px;
+    background: #FDFFFC;
+    
+
 }
-.divNombre {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    color: #000000;
-    height: 15px;
-    margin-left: 5%;  
-}
-.divEmail {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    color: #000000;
-    height: 15px;
-    margin-left: 5%;    
+.contenedor {
+background: #efeded;
+width: 1200px;
+max-width: 1200px;
+padding: 25px 40px 10px 40px;
+box-shadow: 0px 0px 10px rgba(0, 0,0, 0,0.1);
 }
 
-.divContraseña {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    color: #000000;
-    height: 15px;
-    margin-left: 5%;
+.contenedor .text{
+    font-weight: 600;
+    font-size: 35px;
+    align-items: center;
+    background: -webkit-linear-gradient(right, #c20101, #e4190e,#a00000, #ee0202);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
+.contenedor form{
+    padding: 30px 0 0 0 0;
+}
+.contenedor form .formrow{
+    display: flex;
+    margin: 70px 0px;
+  
+}
+form .formrow .inputdata{
+    width: 100%;
+    height: 40px;
+    margin: 0 20px;
+    position: relative;  
+}
+.inputdata input{
+    display: block;
+    height: 100%;
+    width: 100%;
+    border: none ;
+    border-bottom: 2px solid rgba(0,0,0, 0.12);
+    background: #efeded;
+}
+.inputdata input:focus ~label{
+    transform: translateY(-10px);
+    color: #c20101;
+    font-size: 14px;
+    pointer-events: none;
+    transition: all 0.3s ease;
+
+}
+
+
+.inputdata input:valid ~label{
+    transform: translateY(-10px);
+    color: #01c228;
+    font-size: 16px;
+    pointer-events: none;
+    transition: all 0.3s ease;
+
+}
+
+.inputdata select:valid {
+    color: #01c228;
+    font-size: 16px;
+    transition: all 0.3s ease;
+}
+
+.inputdata .underline{
+    position: absolute;
+    bottom: 0;
+    height: 2px;
+    width: 100%;
+   
+}
+.inputdata .underline::before,.inputdata .underline::after{
+ position: absolute;
+ content:"";
+ height: 100%;
+ width: 100%;
+ background: #3498db;
+ transform: scaleX(0);
+ transform-origin: center;
+ transition: transform 0.3s ease;
+}
+.inputdata input:focus ~.underline::before,.underline_:after,   .inputdata select:focus ~.underline::before,.underline_::after{
+transform: scaleX(1);
+
+}
+
+
+.inputdata label{
+    position: absolute;
+    bottom: 30px;
+    font-size: 16px;
+    pointer-events: none;
+
+}
+.select {
+    display: block;
+    height: 100%;
+    width: 100%;
+    border: none ;
+    border-bottom: 2px solid rgba(0,0,0, 0.12);
+    background: #efeded;
+ 
+}
+
 .divBoton {
     width: 100%;
     height: 85px;
    
 }
 .Boton {
-    width: 190px;
-    height: 57px;
-    background: #56A3A6;
+    width: 160px;
+    height: 65px;
+    background: #f70707;
     border: 1px solid #ABABAB;
     border-radius: 9px;
     font-family: 'Inter';
@@ -161,203 +137,17 @@
     font-size: 24px;
     color: #FDFFFC;
     margin-right: auto;
-    margin-left: 5%;
-    margin-top: 2%;
-}
-.btn{
-    width: 190px;
-    height: 57px;
-    background: #56A3A6;
-    border: 1px solid #ABABAB;
-    border-radius: 9px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    color: #FDFFFC;
-    margin-right: auto;
-    margin-left: 5%;
-    margin-top: 4%;
-}
-.Boton:hover {
-    background-color: #03816e;
-}
-.Boton:active {
-    background-color: #031926;
-}
-.boton.disabled{
-    background-color: #ab0d0d;
+   
 }
 
-@media screen and (max-width: 774px) {
-    .input {
-        width: 80%;
-       
-        }
-}
-@media screen and (max-width: 774px) {
-    .select {
-        width: 80%;
-       
-        }
-}
-@media screen and (max-width: 263px) {
-    .input {
-        width: 80%;
-       
-        }
-}
-@media screen and (max-width: 263px) {
-    .select {
-        width: 80%;
-       
-        }
-}
-@media screen and (max-width: 1300px) {
-    .divCampos {
-        align-items: center;
-        margin-left: 10%;
-        width: 80%;
-        }
-}
-@media screen and (max-width: 1001px) {
-    .divCampos {
-        align-items: center;
-        margin-left: 10%;
-        width: 80%;
-        }
-}
-
-@media screen and (max-width: 750px) {
-    .divCampos {
-        align-items: center;
-        margin-left: 10%;
-        }
-}
-@media screen and (max-width: 903px) {
-    .htitulo1 {
+@media (max-width:700px) {
+    .contenedor .text{
         font-size: 30px;
     }
-    
-}
-@media screen and (max-width: 620px) {
-    .htitulo1 {
-        font-size: 25px;
+    .contenedor form .formrow{
+        display: block;
     }
-    
-}
-@media screen and (max-width: 511px) {
-    .htitulo1 {
-        font-size: 20px;
-     
-        width: 60%;
-    }
-    
-}
-@media screen and (max-width: 271px) {
-    .htitulo1 {
-        font-size: 20px;
-      
-        width: 70%;
-    }
-    
-}
-@media screen and (max-width: 750px) {
-    .Boton {
-        margin-left: 8%;
-        margin-top: 5%;
+    form .formrow .inputdata{
+        margin: 35px 0;
     }
 }
-@media screen and (max-width: 724px) {
-    .Boton {
-        margin-left: 4%;
-        margin-top: 5%;
-    }
-}
-@media screen and (max-width: 378px) {
-    .Boton {
-        margin-left: 2%;
-        margin-top: 5%;
-        width: 90px;
-        height: 50px;
-        font-size: 20px;
-    }
-}
-@media screen and (max-width: 622px) {
-    .Boton {
-        margin-left: 2%;
-        margin-top: 5%;
-        width: 170px;
-        height: 57px;
-    }
-}
-@media screen and (max-width: 527px) {
-    .Boton {
-        align-items: center;
-        margin-left: 2%;
-        margin-top: 5%;
-        width: 160px;
-        height: 57px;
-    }
-}
-@media screen and (max-width: 502px) {
-    .Boton {
-        align-items: center;
-        margin-left: 2%;
-        margin-top: 5%;
-        width: 140px;
-        height: 57px;
-    }
-}
-@media screen and (max-width: 415px) {
-    .Boton {
-        align-items: center;
-        margin-left: 2%;
-        margin-top: 5%;
-        width: 120px;
-        height: 57px;
-    }
-}
-@media screen and (max-width: 452px) {
-    .Boton {
-        align-items: center;
-        margin-left: 2%;
-        margin-top: 5%;
-        width: 110px;
-        height: 57px;
-    }
-}
-@media screen and (max-width: 289px) {
-    .Boton {
-        margin-left: 2%;
-        margin-top: 5%;
-        width: 90px;
-        height: 57px;
-        font-size: 15px;
-    }
-}
-@media screen and (max-width: 263px) {
-    .Boton {
-        margin-left: 2%;
-        margin-top: 5%;
-        width: 60px;
-        height: 57px;
-        font-size: 15px;
-    }
-}
-@media screen and (max-width: 263px) {
-    .htitulo2 {
-        margin-left: 2%;
-    }
-}
-@media screen and (max-width: 353px) {
-    .htitulo2 {
-        margin-left: 2%;
-    }
-}
-
-
-
-
-
-
