--- a/portcrg/styles/EntradaSalida.module.css
+++ b/portcrg/styles/EntradaSalida.module.css
@@ -22,29 +22,30 @@
     min-height: 710px;
     height: 100%;
     margin: 0 auto;
-    background-color: #efeded;
+    background-color: #FDFFFC;
 
 }
 .text{
     width: 80%;
     font-weight: 600;
     font-size: 90px;
-
+    color:  #56a3a6;
     margin-top: 35%;
     margin-left: 5%;
     box-shadow: 0px 0px 10px rgba(0, 0,0, 0,0.1);
     background-color: rgb(255, 255, 254);
-    border-radius: 20px;
+    border-radius: 2px;
+    background-color: #f1f5f9;
 
  
 
 }
 
 .label{
-
     bottom: 30px;
     font-size: 30px;
     margin-top: 40px;
+    color: #305c36;
 }
 
 .divcodigo{
@@ -55,18 +56,14 @@
 .divbotones{
     width: 50%;
     height: 700px;
-  
     float: right;
 }
 .diventrada{
     width: 100%;
-
     height: 350px;
-
 }
 .divsalida{
     width: 100%;
-
     height: 350px;
 }
 .divcajaasistencia{
@@ -78,11 +75,13 @@
     margin-left: 30px;
     border-radius: 5px;
     margin-right: auto;
-    box-shadow: 1px 2px 5px;
+    box-shadow: 1px 1px 5px rgba(0, 0,0, 0,0.1);
     font-size: auto;
     margin-top: 15px;
     padding: 30px;
+    background-color: #f1f5f9;
 }
+
 .botonsalida {
     width: 80%;
     height: 120px;
