--- a/portcrg/styles/Sing_up.module.css
+++ b/portcrg/styles/Sing_up.module.css
@@ -37,12 +37,12 @@ box-shadow: 0px 0px 10px rgba(0, 0,0, 0,0.1);
 }
 .contenedor form .formrow{
     display: flex;
-    margin: 70px 0px;
+    margin: 60px 0px;
   
 }
 form .formrow .inputdata{
     width: 100%;
-    height: 40px;
+    height: 35px;
     margin: 0 20px;
     position: relative;  
 }
@@ -122,6 +122,10 @@ transform: scaleX(1);
     font-weight: bold;
 
  
+}
+.ojo{
+    height: 5px;
+    width: 5px;
 }
 
 .divBoton {
